plain-http/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: plain-http
  labels:
    linkerd.io/inject: enabled  # Enable Linkerd proxy injection for observability
